--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -14,7 +14,12 @@ img
 @media (max-width: 768px)
 	.container
 		max-width: 580px
-		width: 95%
+		width: 90% 
+
+@media (max-width: 588px)
+	.container
+		max-width: 500px
+		width: 75%
 button
 	border-radius: 10px
 	background-color: $main-color
