--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,8 @@
+@import 'fonts'
 @import 'colors'
 @import 'interface'
 @import 'blocks/navbar'
 // стили для главноего экрана
 @import 'blocks/hero'
+
+
