--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,7 +1,7 @@
 
 body
 	font-family: sans-serif
-
+	+reg
 img 
 	max-width: 100%
 .container
@@ -25,3 +25,5 @@ button
 	background-color: $main-color
 	border: none
 	padding: 18px 30px
+
+
