--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -8,13 +8,12 @@
 		padding-right: 120px
 		&__title
 			font-size: 41px
-			font-weight: 700
 			line-height: 55px
 			margin-bottom: 40px
+			+bold
 		&__subtitle
 			display: inline-block
 			font-size: 20px
-			font-weight: 500
 			margin-bottom: 69px
 	&-list
 		margin: 0
