--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -16,11 +16,11 @@
 		text-align: right
 	&__phone
 		font-size: 20px
-		font-weight: 400
 		color: $text-color
 		text-decoration: none
 		margin-top: 10px
 		display: inline-block
+		+bold
 		
 @media (max-width: 768px)
 	.navbar
