--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,4 +1,5 @@
-
+*
+	box-sizing: border-box
 body
 	font-family: sans-serif
 	+reg
@@ -25,5 +26,21 @@ button
 	background-color: $main-color
 	border: none
 	padding: 18px 30px
+	&:hover
+		background-color: lighten($main-color, 10%)
+		cursor: pointer
 
+.section
+	padding: 90px 0
+	&-title
+		font-size: 24px
+		+bold
+	&-subtitle
+		font-size: 16px
+		display: block
 
+.input
+	border: 1px solid $border-input
+	padding: 20px 26px
+	font-size: 15px
+	border-radius: 10px
