слайдеры и модальный блок

--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -19,6 +19,7 @@
 		max-width: 345px
 		line-height: 35px
 		margin-bottom: 24px
+		text-align: left
 	&__subtitle
 		max-width: 250px
 		margin-bottom: 30px
@@ -27,9 +28,11 @@
 		width: 240px
 		&:first-child
 			margin-right: 10px
+
 	&__button
 		width: 100%
 		min-height: 70px
+	
 
 @media (max-width: 1200px)
 	.offer
