--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,14 +54,14 @@ img {
   }
 }
 
-button {
+.button {
   border-radius: 10px;
   background-color: #ffd200;
   border: none;
   padding: 18px 30px;
 }
 
-button:hover {
+.button:hover {
   background-color: #ffdb33;
   cursor: pointer;
 }
@@ -72,6 +72,7 @@ button:hover {
 
 .section-title {
   font-size: 24px;
+  text-align: center;
   font-family: "Museo Sans Cyrl 700", sans-serif;
   font-weight: 700;
 }
@@ -86,6 +87,15 @@ button:hover {
   padding: 20px 26px;
   font-size: 15px;
   border-radius: 10px;
+  outline: none;
+}
+
+.input:focus {
+  border: 1px solid #ffd200;
+}
+
+.arrows__left:hover, .arrows__right:hover {
+  cursor: pointer;
 }
 
 .navbar-block {
@@ -285,6 +295,7 @@ button:hover {
   max-width: 345px;
   line-height: 35px;
   margin-bottom: 24px;
+  text-align: left;
 }
 
 .offer__subtitle {
@@ -327,4 +338,63 @@ button:hover {
     width: 100%;
     padding-right: 0;
   }
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #000, 0.5;
+  display: none;
+}
+
+.modal_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-dialog {
+  margin: auto;
+  width: 90%;
+  max-width: 450px;
+  min-width: 200px;
+  background-color: #fff;
+  padding: 40px;
+  position: relative;
+}
+
+.modal-dialog__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.portfolio {
+  background: #f5f5f5 url("../img/portfolio/partfolio_pattern.jpg") center left repeat-y;
+  background-size: 50%;
+}
+
+.portfolio__title {
+  max-width: 500px;
+  margin: auto;
+  margin-bottom: 100px;
+}
+
+.portfolio__arrows {
+  max-width: 120px;
+  margin: auto;
+  margin-top: 68px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.slider__image {
+  margin: auto;
 }
