--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -21,7 +21,7 @@ img
 	.container
 		max-width: 500px
 		width: 75%
-button
+.button
 	border-radius: 10px
 	background-color: $main-color
 	border: none
@@ -34,13 +34,22 @@ button
 	padding: 90px 0
 	&-title
 		font-size: 24px
+		text-align: center
 		+bold
 	&-subtitle
 		font-size: 16px
 		display: block
-
+	
 .input
 	border: 1px solid $border-input
 	padding: 20px 26px
 	font-size: 15px
 	border-radius: 10px
+	outline: none
+	&:focus
+		border: 1px solid $main-color
+		
+.arrows
+	&__left, &__right
+		&:hover
+			cursor: pointer
