--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,3 +8,6 @@
 @import 'blocks/offer'
 @import 'blocks/modal'
 @import 'blocks/portfolio'
+@import 'blocks/price'
+@import 'blocks/brif'
+@import 'blocks/footer'
