--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -16,6 +16,9 @@ img
 	.container
 		max-width: 580px
 		width: 90% 
+	.section
+		padding-top: 60px
+		padding-bottom: 60px
 
 @media (max-width: 588px)
 	.container
@@ -35,6 +38,7 @@ img
 	&-title
 		font-size: 24px
 		text-align: center
+		max-width: 500px
 		+bold
 	&-subtitle
 		font-size: 16px
